--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,7 @@ target 'WhatTheTodo' do
 
 # Required by RNFirebase
 pod 'Firebase/Core', '~> 6.3.0'
+pod 'Firebase/Auth', '~> 6.3.0'
 pod 'Firebase/Messaging', '~> 6.3.0'
 pod 'Firebase/Database', '~> 6.3.0'
 pod 'Firebase/DynamicLinks', '~> 6.3.0'
