--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.0",
-    "react-native-firebase": "^5.5.6",
     "react-native-animatable": "^1.3.2",
-    "react-native-blur-overlay": "^1.0.7"
+    "react-native-blur-overlay": "^1.0.7",
+    "react-native-firebase": "^5.5.6",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
