--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "react-native-animatable": "^1.3.2",
     "react-native-blur-overlay": "^1.0.7",
     "react-native-firebase": "^5.5.6",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.3.0",
+    "react-native-screens": "^1.0.0-alpha.23",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.9.3",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
