--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "react-native-blur-overlay": "^1.0.7",
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.4.1",
-    "react-native-reanimated": "^1.3.0",
+    "react-native-reanimated": "^1.0.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-navigation": "^4.0.10",
+    "react-navigation-animated-switch": "^0.3.2",
     "react-navigation-stack": "^1.9.3",
     "styled-components": "^4.4.0"
   },
