--- a/ios/WhatTheTodo/Info.plist
+++ b/ios/WhatTheTodo/Info.plist
@@ -22,6 +22,29 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+
+	<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+		<key>CFBundleURLSchemes</key>
+		<array>
+		<string>fb{767776117014104}</string>
+		</array>
+	</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>{767776117014104}</string>
+	<key>FacebookDisplayName</key>
+	<string>{What-The-Todo}</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+	<string>fbapi</string>
+	<string>fb-messenger-share-api</string>
+	<string>fbauth2</string>
+	<string>fbshareextension</string>
+	</array>
+
+
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
