--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.61.0",
     "react-native-animatable": "^1.3.2",
     "react-native-blur-overlay": "^1.0.7",
+    "react-native-fbsdk": "^1.0.4",
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.0.0",
