--- a/ios/WhatTheTodo/Info.plist
+++ b/ios/WhatTheTodo/Info.plist
@@ -23,26 +23,7 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 
-	<key>CFBundleURLTypes</key>
-	<array>
-	<dict>
-		<key>CFBundleURLSchemes</key>
-		<array>
-		<string>fb{767776117014104}</string>
-		</array>
-	</dict>
-	</array>
-	<key>FacebookAppID</key>
-	<string>{767776117014104}</string>
-	<key>FacebookDisplayName</key>
-	<string>{What-The-Todo}</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-	<string>fbapi</string>
-	<string>fb-messenger-share-api</string>
-	<string>fbauth2</string>
-	<string>fbshareextension</string>
-	</array>
+
 
 
 	<key>LSRequiresIPhoneOS</key>
@@ -80,5 +61,25 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+		<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+		<key>CFBundleURLSchemes</key>
+		<array>
+		<string>fb767776117014104</string>
+		</array>
+	</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>767776117014104</string>
+	<key>FacebookDisplayName</key>
+	<string>What The Todo</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+	<string>fbapi</string>
+	<string>fb-messenger-share-api</string>
+	<string>fbauth2</string>
+	<string>fbshareextension</string>
+	</array>
 </dict>
 </plist>
