--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-fbsdk": "^1.0.4",
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-iap": "^4.0.4",
     "react-native-reanimated": "^1.0.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-navigation": "^4.0.10",
