--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.whatthetodo">
+  package="com.heebeancreative.whatthetodo">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,6 +10,10 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+      <provider android:authorities="com.facebook.app.FacebookContentProvider767776117014104"
+          android:name="com.facebook.FacebookContentProvider"
+          android:exported="true" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
